fixed img alignment

--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,9 @@ body{
   margin: 0;
   overflow:hidden;
   display: grid;
-  align-items: center;
-  justify-items: center;
+  place-items: center;
+  text-align: center;
+  margin: 0 auto;
   background: transparent;
 }
 
@@ -136,7 +137,7 @@ body{
 .inside-mobile-screen{
   /*accounting for padding*/
   height: 76vh;
-  width: 35vh;
+  width: 33vh;
   grid-area: content;
   text-align: center;
   background:
@@ -153,6 +154,7 @@ body{
   left: 40vh;
   transition: left 0.7s ease-out;
   font-size: 2vmin;
+  text-align: center;
 }
 
 p{
